# pdft-benchmarks

./: .gitignore  CLAUDE.md  LICENSE  README.md  REPRODUCE.md  _bootstrap.py  analyze.py  baselines.py  config.py  data_loading.py  evaluation.py  generate_report.py  harness.py  post_run_analysis.py  pyproject.toml  run_all.sh  run_div2k_10q.py  run_div2k_10q_2gpu.sh  run_div2k_8q.py  run_div2k_8q_blocked.py  run_div2k_8q_blocked_rich.py  run_quickdraw.py
diagrams/: README.md  circuits.typ  parameter_efficiency.typ  parameter_efficiency_table.tex
docs/: global_pca_vs_block_dct.typ  paper-issue-2-topology.md  paper-issue-draft.md  paper-recommendations.md
experiments/: adaptive_block_size.py  dataset_compression.py  dct4_controlled_compare.py  dct4_direct_training.py  dct4_disturbance_sweep.py  dct4_freeze_sweep.py  dct4_seed_sweep.py  dct4_structure_inclusion.py  dct4_sweep_training.py  dct4_topk_sweep.py  div2k_10q_block.py  div2k_10q_circuit.py  div2k_8q_blocked_vs_blockdct.py  div2k_8q_circuit_vs_classical.py  div2k_8q_l1_init_anchor.py  div2k_8q_pca_vs_block_dct.py  div2k_block_size_sweep.py  post_run_analysis.py  qft_block_emergence.py  qft_direct_training.py  qft_freeze_sweep.py  qft_identity_regularization.py  qft_progressive.py  qft_progressive_frozen.py  qft_seed_sweep.py  qft_topk_sweep.py  qft_unfreeze.py  qft_warmstart_blocked.py  quickdraw.py  quickdraw_block_size_sweep.py  quickdraw_pca_vs_block_dct.py  render_dct4_training_dynamics.py  seed98_full_train.py  train_basis_loss.py  train_basis_trace.py
plots/: __init__.py  loss_trajectories.py  rate_distortion.py
results/: .gitignore
scripts/: append_pca_to_archived_runs.py  extract_canonical_cells.py  render_freq_recon_grid.py  render_paper_table.py  render_published_readme.py  run_canonical.sh  sweep_qft_config.py  verify_dct_klt_convergence.py
tables/: published_8q_quickdraw.tex  published_8q_quickdraw_v2.tex
tests/: conftest.py  test_2gpu_fanout.py  test_adaptive.py  test_analysis.py  test_analyze.py  test_baselines.py  test_bases_identity.py  test_block_size_sweep_factories.py  test_block_structure.py  test_codec.py  test_config.py  test_data_loading.py  test_dct4_controlled_basis.py  test_dct4_suite.py  test_disturbance.py  test_div2k_smoke_e2e.py  test_evaluation.py  test_extraction.py  test_harness_smoke.py  test_identity_reg.py  test_julia_schema_compat.py  test_loading.py  test_manifest.py  test_paper_style.py  test_pca.py  test_presets.py  test_progressive_identity_bases.py  test_qft_progressive.py  test_qft_progressive_smoke.py  test_quickdraw_smoke_e2e.py  test_render_published_readme.py  test_render_qft_block_structure.py  test_render_qft_progressive.py  test_report.py  test_sweep_training.py  test_training_smoke.py  test_unfreeze.py
tools/: README.md  analyze_block_emergence_spectrogram.py  build_dct4_reference.py  cellify_run.py  cpu_vs_gpu_batched.py  (+42 more)
(+1624 files in other folders)
