[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdft-benchmarks"
version = "0.1.0"
description = "Benchmarks for pdft: GPU runs on quickdraw / DIV2K, rate-distortion vs DCT/JPEG baselines, paper figures."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "zazabap" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pdft>=0.2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["plots"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
