[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdft-benchmarks"
version = "0.1.0"
description = "Benchmarks for pdft: GPU runs on quickdraw / DIV2K, rate-distortion vs DCT/JPEG baselines, paper figures."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "zazabap" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pdft>=0.2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "scikit-image>=0.22",
    "tqdm>=4.65",
]

[project.optional-dependencies]
bench = []
gpu = [
    "pdft[gpu]>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "build>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdft_benchmarks"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
    # This repo keeps several local/deferred imports in tests, CLIs, and optional
    # dependency paths so lightweight checks do not import JAX/pdft eagerly.
    "E402",
    # Existing scripts use compact plotting statements in a few places.
    "E702",
    # Test fixtures use small inline callables for readability.
    "E731",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: GPU/dataset-dependent benchmark tests (deselect with -m 'not integration')",
    "slow: end-to-end driver tests with real training (skip with -m 'not slow')",
]
